avoid nav flickering on firefox

--- a/components/nav.styl
+++ b/components/nav.styl
@@ -11,6 +11,7 @@
   z-index: 1
   nav
     overflow-x: auto
+    overflow-y: hidden
     white-space: nowrap
   a
     padding: 1rem .5rem
